# esp32s3-w5500

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
.zed/: settings.json
components/xxhash/: CMakeLists.txt
components/xxhash/include/: xxhash.h
main/: CMakeLists.txt  Kconfig.projbuild  ethernet.c  ethernet.h  event_handler.c  event_handler.h  http_client.c  http_client.h  idf_component.yml  main.c  nvram.c  nvram.h  params.h  prov.c  prov.h  utils.c  utils.h
